# sms-classification

./: .gitignore  Dockerfile  README.md  commands.py  data.dvc  docker-compose.yaml  env.example
.dvc/: config
.github/workflows/: ci.yaml
classification/: .pre-commit-config.yaml  main.py  pyproject.toml
classification/api/: app.py  schemas.py
classification/conf/: train.yaml
classification/data/: dataset_loader.py  label_encoder.py  preprocess.py
classification/inference/: infer.py  predict.py
classification/models/: bert.py  loss.py  mlp.py  model.py  word2vec.py
classification/module/: module.py
classification/training/: train.py
classification/utils/: commit_id.py  config.py  data_util.py
conf/: conf.yaml
conf/callbacks/: default.yaml
conf/data/: default.yaml
conf/inference/: default.yaml
conf/logging/: default.yaml
conf/models/: bert.yaml  mlp.yaml
conf/module/: default.yaml
conf/training/: default.yaml
config/model/: modernbert.yaml
config/training/: default.yaml
configs/model/: modernbert.yaml
