[project]
name = "sms-project-classification"
version = "0.1.0"
description = "SMS Project Classification with BERT model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "fire>=0.7.1",
    "pre-commit>=4.4.0",
]
